--- a/src/_includes/products.njk
+++ b/src/_includes/products.njk
@@ -8,9 +8,9 @@
       <div class="products__col">
         
         <div class="products_row">
-          <div class=" primary_video">
+          {# <div class=" primary_video">
             <style>.h_iframe-aparat_embed_frame{position:relative;}.h_iframe-aparat_embed_frame .ratio{display:block;width:100%;height:auto;}.h_iframe-aparat_embed_frame iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="h_iframe-aparat_embed_frame"><span style="display: block;padding-top: 57%"></span><iframe src="https://www.aparat.com/video/video/embed/videohash/nUtbD/vt/frame?&recom=none" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div>
-          </div>
+          </div> #}
           <div class="videos">
             {% for vid in collections.vid %}
                 <div class="video_card" data-item={{vid.data.category}} id="pgWaM"><style>.h_iframe-aparat_embed_frame{position:relative;}.h_iframe-aparat_embed_frame .ratio{display:block;width:100%;height:auto;}.h_iframe-aparat_embed_frame iframe{position:absolute;top:0;left:0;width:100%;height:100%;}</style><div class="h_iframe-aparat_embed_frame"><span style="display: block;padding-top: 57%"></span><iframe src="https://www.aparat.com/video/video/embed/videohash/{{vid.data.id}}/vt/frame" allowFullScreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"></iframe></div></div>
