--- a/src/_includes/products.njk
+++ b/src/_includes/products.njk
@@ -2,7 +2,7 @@
       <!-- <div class="samplePage__poster " >نمونــه کار</div> -->
       <ul class="filter-menu video">
       {% for item in collections.category %}
-        <li data-target={{item.title}} >{{item.faname}}</li>
+        <li data-target={{item.title}} class="current">{{item.faname}}</li>
       {% endfor %}
         {# <li data-target="montakhab" class="current">منتخب</li>
         <li data-target="namahang" >نماهنگ</li>
