navbar fix bug1

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,4 +1,6 @@
-<div class="nav__button"><img src="./nav-icon/home q.png" alt=""></div>
+<div class="nav__button">
+  <img src="./nav-icon/home q.png" alt="">
+</div>
   <div class="mobileHeader">
     <div class="mobileHeader__poster">Argo</div>
     <div class="mobileHeader__navbtn"></div>
