--- a/public/styles/mobile.css
+++ b/public/styles/mobile.css
@@ -6,7 +6,7 @@
         width: 100vw;
         background-color: rgb(36, 36, 36);
         top: 0;
-        height: 60px;
+        height: 50px;
         z-index: 100;
     }
     .mobileHeader__poster {
@@ -21,14 +21,14 @@
         cursor: pointer;
         transition: 300ms;
         transform: rotate(180deg);
-        top: 10px;
         right: 20px;
+    }
+    .nav__button img {
+        object-fit: contain;
+        width: 60px;
     }
     .nav__button.active {
         transform: rotate(0);
-    }
-    .nav__button img {
-        width: 80px;
     }
     .nav__socials, .scroll .nav__socials {
         margin: 0 auto;
@@ -40,12 +40,14 @@
         transition: none;
         z-index: 99;
         padding: 1rem 0;
+        right: 0px;
     }
     .nav.active {
-        top: 45px;
+        top: 30px;
     } 
     .links {
         flex-direction: column;
+        margin: 0;
     }
     
     .a {
