--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -428,8 +428,7 @@ a {
     background-image: url(../cam/tw\ cam\ 2.jpg);
     background-repeat: no-repeat;
     background-size: contain ;
-    background-position: -340px -30px;
-
+    background-position: -240px -30px;
     transition: 2s;
 }
 
@@ -516,8 +515,9 @@ a {
     border: rgb(0, 0, 0) 1px solid;
 }
 .contactPage__form input {
-    width: 98%;
+    width: 95%;
     height: 58px;
+    padding: 0 10px 0 0;
 } 
 .contactPage__form .botton {
     margin: 0px auto 0 0;
