better css import

--- a/src/_includes/4pages.njk
+++ b/src/_includes/4pages.njk
@@ -5,7 +5,7 @@
         </div>
         <div class="fourpages__def">
           <div class="each__def" style='border-top: solid 1px rgb(0, 250, 146)';>
-            طراحی با جدید ترین متود های روز
+            {{design_def}}
           </div>
            
         </div>
@@ -16,7 +16,7 @@
         </div>
         <div class="fourpages__def" style="border-top: 1px solid #20cbff;">
           <div class="each__def">
-            طراحی با جدید ترین متود های روز
+            {{editing_def}}
           </div>
         </div>
       </div>
@@ -26,7 +26,7 @@
         </div>
         <div class="fourpages__def" style="border-top: 1px solid #ff2058;">
           <div class="each__def">
-            طراحی با جدید ترین متود های روز
+            {{filming_def}}
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
         </div>
         <div class="fourpages__def" style="border-top: 1px solid #dbdbdb;">
           <div class="each__def">
-            طراحی با جدید ترین متود های روز
+            {{web_def}}
           </div>
         </div>
       </div>
