--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
+    
+
+    <link rel="stylesheet" href="./styles/base.css">
+    <link rel="stylesheet" href="./styles/photo-grid.css">
+    <link rel="stylesheet" href="./styles/modal.css">
+    <link rel="stylesheet" href="./styles/mobile.css">
+    <link rel="stylesheet" href="./styles/little.css">
     <style>
-      @import url('./styles/base.css');
-      @import url('./styles/photo-grid.css');
-      @import url('./styles/modal.css');
-      @import url('./styles/mobile.css');
-      @import url('./styles/little.css');
+      
+      
     </style>
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Argo Advertising Group</title>
@@ -28,8 +32,5 @@
     {% include "contact.njk" %}
     {% include "modal.njk" %}
     {% include "scripts.njk" %}
-
-
-    
 </body>
 </html>
