--- a/src/index.njk
+++ b/src/index.njk
@@ -1,3 +1,7 @@
 ---
 layout: base.njk
+design_def: بهترین دیزاین
+editing_def: ادیت حرفه ای
+filming_def: فیلم برداری با بهترین تجهیزات
+web_def: طراحی سایت با جدیدترین تکنولوژی های روز
 ---
