--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="./styles/style.css">
 
     <link rel="stylesheet" href="./styles/base.css">
@@ -11,16 +15,22 @@
     <link rel="stylesheet" href="./styles/modal.css">
     <link rel="stylesheet" href="./styles/mobile.css">
     <link rel="stylesheet" href="./styles/little.css">
+
+   
+
     <style>
       
       
     </style>
+    
+
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>Argo Advertising Group</title>
 </head>
 <body>
     {% include "header.njk" %}
-    {% include "home.njk" %}
+    {# {% include "home.njk" %} #}
+    {% include "cursol.njk" %}
     {% include "4pages.njk" %}
     <div class="typography"></div>
     {% include "about.njk" %}
@@ -32,5 +42,7 @@
     {% include "modal.njk" %}
     {% include "scripts.njk" %}
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
