--- a/src/_includes/cursol.njk
+++ b/src/_includes/cursol.njk
@@ -3,7 +3,7 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item ">
-     <img src="./sample-work/n-SARAKHS_3.png" alt="">
+     <div class="sarkh"></div>
     </div>
 
     <div class="carousel-item">
